templates/src/data-curator/content/force-app/main/default/objects/Governance_Task__c/Governance_Task__c.object-meta.xml
<CustomObject>
    <description>Workflow tasks generated by scans, agent recommendations, or governance reviews.</description>
    <label>Governance Task</label>
    <nameField>
        <label>Governance Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Governance Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>