templates/src/data-curator/content/force-app/main/default/objects/Governance_Task__c/fields/Agent_Suggested__c.field-meta.xml
<CustomField>
    <fullName>Agent_Suggested__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Agent Suggested</label>
    <type>Checkbox</type>
</CustomField>