templates/src/data-curator/content/force-app/main/default/objects/Governance_Task__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Governance Tasks</relationshipLabel>
    <relationshipName>AssignedGovernanceTasks</relationshipName>
    <type>Lookup</type>
</CustomField>