templates/src/data-curator/content/force-app/main/default/objects/Governance_Task__c/fields/Due_On__c.field-meta.xml
<CustomField>
    <fullName>Due_On__c</fullName>
    <label>Due On</label>
    <type>Date</type>
</CustomField>