templates/src/data-curator/content/force-app/main/default/objects/Governance_Task__c/fields/Recommended_Action__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Action__c</fullName>
    <label>Recommended Action</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>