templates/src/data-curator/content/force-app/main/default/objects/Governance_Task__c/fields/Task_Type__c.field-meta.xml
<CustomField>
    <fullName>Task_Type__c</fullName>
    <label>Task Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Attestation</fullName>
            </value>
            <value>
                <fullName>OwnershipRecovery</fullName>
                <default>true</default>
                <label>Ownership Recovery</label>
            </value>
            <value>
                <fullName>DuplicateReview</fullName>
                <label>Duplicate Review</label>
            </value>
            <value>
                <fullName>ArchiveReview</fullName>
                <label>Archive Review</label>
            </value>
            <value>
                <fullName>Exception</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>